Fix heading not being visible when a title selected

--- a/src/main/resources/web/css/styles.css
+++ b/src/main/resources/web/css/styles.css
@@ -250,7 +250,6 @@ a.ui-button:active, .ui-button:active,
     border: 1px solid #cccccc;
     background: #ededed;
     font-weight: normal;
-    color: #2b2b2b;
 }
 
 .ui-datepicker .ui-icon {
